--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,7 @@
 {
   "configurations": [
     {
-      "name": "Connect to server",
+      "name": "Remote launch",
       "type": "go",
       "request": "launch",
       "mode": "remote",
